force-app/main/default/objects/Ofertas_cabeceraSet__x/Ofertas_cabeceraSet__x.object-meta.xml
<CustomObject>
    <externalDataSource>SAP</externalDataSource>
    <externalName>Ofertas_cabeceraSet</externalName>
    <label>Ofertas_cabeceraSet</label>
    <pluralLabel>Ofertas_cabeceraSet</pluralLabel>
</CustomObject>