force-app/main/default/objects/Ofertas_cabeceraSet__x/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation to account</description>
    <externalDeveloperName>id18</externalDeveloperName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ofertas_cabeceraSet</relationshipLabel>
    <relationshipName>Ofertas_cabeceraSet</relationshipName>
    <type>Lookup</type>
</CustomField>