force-app/main/default/objects/Ofertas_cabeceraSet__x/fields/Comis__c.field-meta.xml
<CustomField>
    <fullName>Comis__c</fullName>
    <description>Comis</description>
    <externalDeveloperName>Comis</externalDeveloperName>
    <label>Comis</label>
    <length>10</length>
    <type>Text</type>
</CustomField>