force-app/main/default/objects/Ofertas_cabeceraSet__x/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Company</description>
    <externalDeveloperName>Company</externalDeveloperName>
    <label>Company</label>
    <length>4</length>
    <type>Text</type>
</CustomField>