force-app/main/default/objects/Ofertas_cabeceraSet__x/fields/Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit__c</fullName>
    <description>Credit</description>
    <externalDeveloperName>Credit</externalDeveloperName>
    <label>Credit</label>
    <length>1</length>
    <type>Text</type>
</CustomField>