force-app/main/default/objects/Ofertas_cabeceraSet__x/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>Division</description>
    <externalDeveloperName>Division</externalDeveloperName>
    <label>Division</label>
    <length>2</length>
    <type>Text</type>
</CustomField>