force-app/main/default/objects/Ofertas_cabeceraSet__x/fields/Erdat__c.field-meta.xml
<CustomField>
    <fullName>Erdat__c</fullName>
    <description>Erdat</description>
    <externalDeveloperName>Erdat</externalDeveloperName>
    <label>Erdat</label>
    <type>DateTime</type>
</CustomField>