force-app/main/default/objects/Ofertas_cabeceraSet__x/fields/Erzet__c.field-meta.xml
<CustomField>
    <fullName>Erzet__c</fullName>
    <description>Erzet</description>
    <externalDeveloperName>Erzet</externalDeveloperName>
    <label>Erzet</label>
    <length>6</length>
    <type>Text</type>
</CustomField>