force-app/main/default/objects/Ofertas_cabeceraSet__x/fields/Exrate__c.field-meta.xml
<CustomField>
    <fullName>Exrate__c</fullName>
    <description>Exrate</description>
    <externalDeveloperName>Exrate</externalDeveloperName>
    <label>Exrate</label>
    <length>9</length>
    <type>Text</type>
</CustomField>