force-app/main/default/objects/Ofertas_cabeceraSet__x/fields/Gtotal__c.field-meta.xml
<CustomField>
    <fullName>Gtotal__c</fullName>
    <description>Gtotal</description>
    <externalDeveloperName>Gtotal</externalDeveloperName>
    <label>Gtotal</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>