force-app/main/default/objects/Ofertas_cabeceraSet__x/fields/ID18__c.field-meta.xml
<CustomField>
    <fullName>ID18__c</fullName>
    <description>ID18</description>
    <externalDeveloperName>ID18</externalDeveloperName>
    <label>ID18</label>
    <length>18</length>
    <type>Text</type>
</CustomField>