force-app/main/default/objects/Ofertas_cabeceraSet__x/fields/Lcurr__c.field-meta.xml
<CustomField>
    <fullName>Lcurr__c</fullName>
    <description>Lcurr</description>
    <externalDeveloperName>Lcurr</externalDeveloperName>
    <label>Lcurr</label>
    <length>5</length>
    <type>Text</type>
</CustomField>