force-app/main/default/objects/Ofertas_cabeceraSet__x/fields/Orderdate__c.field-meta.xml
<CustomField>
    <fullName>Orderdate__c</fullName>
    <description>Orderdate</description>
    <externalDeveloperName>Orderdate</externalDeveloperName>
    <label>Orderdate</label>
    <type>DateTime</type>
</CustomField>