force-app/main/default/objects/Ofertas_cabeceraSet__x/fields/Ordernum__c.field-meta.xml
<CustomField>
    <fullName>Ordernum__c</fullName>
    <description>Ordernum</description>
    <externalDeveloperName>Ordernum</externalDeveloperName>
    <label>Ordernum</label>
    <length>10</length>
    <type>Text</type>
</CustomField>