force-app/main/default/objects/Ofertas_cabeceraSet__x/fields/Ordertype__c.field-meta.xml
<CustomField>
    <fullName>Ordertype__c</fullName>
    <description>Ordertype</description>
    <externalDeveloperName>Ordertype</externalDeveloperName>
    <label>Ordertype</label>
    <length>4</length>
    <type>Text</type>
</CustomField>