force-app/main/default/objects/Ofertas_cabeceraSet__x/fields/Refer__c.field-meta.xml
<CustomField>
    <fullName>Refer__c</fullName>
    <description>Refer</description>
    <externalDeveloperName>Refer</externalDeveloperName>
    <label>Refer</label>
    <length>35</length>
    <type>Text</type>
</CustomField>