force-app/main/default/objects/Ofertas_cabeceraSet__x/fields/Repo2__c.field-meta.xml
<CustomField>
    <fullName>Repo2__c</fullName>
    <description>Repo2</description>
    <externalDeveloperName>Repo2</externalDeveloperName>
    <label>Repo2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>