force-app/main/default/objects/Ofertas_cabeceraSet__x/fields/Salesorg__c.field-meta.xml
<CustomField>
    <fullName>Salesorg__c</fullName>
    <description>Salesorg</description>
    <externalDeveloperName>Salesorg</externalDeveloperName>
    <label>Salesorg</label>
    <length>4</length>
    <type>Text</type>
</CustomField>